k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: osparty-api
  labels:
    app: osparty-api
spec:
  selector:
    app: osparty-api
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: management
      port: 9090
      targetPort: management
