k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: osparty-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.osparty.net
      secretName: osparty-api-tls
  rules:
    - host: api.osparty.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: osparty-api
                port:
                  name: http
